--- a/style.css
+++ b/style.css
@@ -185,16 +185,12 @@ label {
 /* Filters */
 .bottom {
   display: grid;
-  grid-template-columns: repeat(3, auto);
+  grid-template-columns: repeat(2, auto);
   padding: 20px;
   font-size: 15px;
 }
 .bottom > * {
   transition: 0.3s;
-}
-.bottom > p:nth-child(1) {
-  opacity: 0.3;
-  width: 150px;
 }
 .filter {
   display: flex;
@@ -218,12 +214,6 @@ label {
   cursor: pointer;
 }
 .clear:hover {
-  opacity: 0.5;
-}
-[draggable] {
-  cursor: move;
-}
-[draggable].dragging {
   opacity: 0.5;
 }
 .attribution {
@@ -303,6 +293,83 @@ label {
 
 @media screen and (min-width: 375px) and (max-width: 580px) {
   body {
-    background: url(./images/bg-mobile-light.jpg) no-repeat;
+    background: url(./images/bg-mobile-light.jpg) no-repeat,
+      var(--very-light-gray);
+    background-size: 100% 200px;
+  }
+  .top h1 {
+    font-size: 25px;
+    letter-spacing: 10px;
+  }
+  .theme > img {
+    width: 20px;
+  }
+  main {
+    width: 90%;
+    margin-top: 50px;
+  }
+  .add {
+    margin-top: 30px;
+    height: 50px;
+  }
+  .add input {
+    align-self: center;
+    font-size: 13px;
+    margin-top: 3px;
+    margin-left: 8px;
+  }
+  .idk {
+    width: 20px;
+    height: 20px;
+  }
+  .item {
+    height: 50px;
+    font-size: 13px;
+    padding: 15px;
+  }
+  input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+  }
+  .item label {
+    margin-left: 8px;
+  }
+  .bottom {
+    font-size: 13px;
+    grid-template-columns: auto;
+    justify-content: center;
+    position: relative;
+  }
+  .clear {
+    text-align: center;
+  }
+  .filter {
+    position: absolute;
+    background: white;
+    top: 80px;
+    padding: 15px;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    text-align: center;
+    box-shadow: 0px 0px 20px rgb(0 0 0 / 20%);
+  }
+  .filter > * {
+    margin: 0px 10px;
+  }
+  .attribution {
+    margin-top: 100px;
+    font-size: 12px;
+  }
+  .remove {
+    opacity: 1;
+  }
+  .dark-theme {
+    background: url(./images/bg-mobile-dark.jpg) no-repeat,
+      var(--very-dark-blue);
+    background-size: 100% 200px;
+  }
+  .dark-theme .filter {
+    background: var(--very-dark-desaturated-blue);
   }
 }
