--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ label {
 /* Filters */
 .bottom {
   display: grid;
-  grid-template-columns: repeat(2, auto);
+  grid-template-columns: repeat(3, auto);
   padding: 20px;
   font-size: 15px;
 }
@@ -197,6 +197,7 @@ label {
   width: 160px;
   justify-content: space-between;
   color: var(--dark-grayish-blue);
+  justify-self: center;
 }
 .current {
   color: var(--bright-blue);
@@ -226,6 +227,7 @@ label {
   color: var(--bright-blue);
 }
 
+/* Dark Theme */
 .dark-theme {
   background: url(./images/bg-desktop-dark.jpg) no-repeat, var(--very-dark-blue);
   transition: 0.3s;
@@ -336,9 +338,10 @@ label {
   }
   .bottom {
     font-size: 13px;
-    grid-template-columns: auto;
+    grid-template-columns: auto auto;
     justify-content: center;
     position: relative;
+    column-gap: 134px;
   }
   .clear {
     text-align: center;
@@ -352,7 +355,7 @@ label {
     flex-wrap: wrap;
     width: 100%;
     text-align: center;
-    box-shadow: 0px 0px 20px rgb(0 0 0 / 20%);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   }
   .filter > * {
     margin: 0px 10px;
